Add maxlength="255" to change comment field
The maximum length of a OSM changeset comment is 255 characters. The OSM
API will return an error when trying to create a changeset with a
comment that is too long.

--- a/matcher/templates/add_tags.html
+++ b/matcher/templates/add_tags.html
@@ -38,6 +38,7 @@
            id="comment"
            name="comment"
            size="50"
+           maxlength="255"
            value="{{ comment }}" />
 
     <button id="save" class="btn btn-primary">save</button>
