--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -7,12 +7,23 @@
 {% endmacro %}
 
 {% macro candidate_item(item) %}
-<div id="{{ item.qid }}" class="card my-2">
+{% set picked = filtered[item.item_id]['candidate'] or none %}
+{% set checked = upload_okay and picked and picked.checkbox_ticked() %}
+{% set qid = item.qid %}
+
+<div id="{{ qid }}"
+     class="card my-2
+     {% if upload_okay and picked %}
+        candidate-item
+        {% if checked %}
+          border-success
+        {% else %}
+          border-danger
+        {% endif %}
+     {% endif %}">
   <div class="card-body">
 <p>
-  <div>
-  {% set picked = filtered[item.item_id]['candidate'] or none %}
-  {% set checked = upload_okay and picked and picked.checkbox_ticked() %}
+  <div id="label-{{ qid }}" {% if upload_okay and picked %} class="item-label alert alert-{% if checked %}success{% else %}danger{% endif %}"{% endif %}>
   {% if upload_okay %}
       {% if picked %}
         {% if checked %}
@@ -264,6 +275,7 @@ map.addLayer(group);
 
 function zoom_to_item(e) {
   e.preventDefault();
+  e.stopPropagation();
   var qid = this.id.substring(4);
 
   marker = markers[qid]
