--- a/matcher/templates/changesets.html
+++ b/matcher/templates/changesets.html
@@ -14,16 +14,23 @@
 <table class="table table-hover">
 <thead>
   <tr>
+    <th class="text-right">when</th>
     <th>place / item</th>
     <th class="text-right">#</th>
     <th class="text-right">size</th>
     <th>user</th>
-    <th class="text-right">when</th>
   </tr>
 </thead>
 <tbody>
 {% for obj in objects %}
 <tr>
+
+<td class="text-nowrap text-right">
+    <a href="https://www.openstreetmap.org/changeset/{{ obj.id }}">
+        {{- obj.created.strftime('%a, %d %b %Y  %H:%M:%S') if obj.created else obj.id -}}
+    </a>
+</td>
+
 
 <td>
     {% if obj.place %}
@@ -62,16 +69,13 @@
   <a href="https://www.openstreetmap.org/user/{{ obj.user.username }}">{{ obj.user.username }}</a>
 </td>
 
-<td class="text-nowrap text-right">
-    <a href="https://www.openstreetmap.org/changeset/{{ obj.id }}">
-        {{- obj.created.strftime('%a, %d %b %Y  %H:%M:%S') if obj.created else obj.id -}}
-    </a>
-</td>
-
-<!-- <td>{{ obj.comment }}</td> -->
 
 
 
+</tr>
+<tr>
+  <td></td>
+  <td colspan="4">{{ obj.comment }}</td>
 </tr>
 {% endfor %}
 </tbody>
