Add option to show tags for all candidate matches

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -459,7 +459,8 @@ Change comment: "<em>{{ obj.comment }}</em>"
     <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
     (Don't worry, there's a confirmation page)
     <p class="mt-3">By default all likely matches are checked.
-	   If you prefer you can <a href="#" id="uncheck-all">uncheck all</a> and tick items as you check them.</p>
+	   If you prefer you can <a href="#" id="uncheck-all">uncheck all</a> and tick items as you check them.
+     <a href="#" id="show-all-tags">Show all tags</a> to see more detail for candidate matches.</p>
     {% endif %}
 
     <div class="my-3">
