Split admin routes into blueprint

--- a/matcher/templates/admin/stop_job.html
+++ b/matcher/templates/admin/stop_job.html
@@ -19,7 +19,7 @@
   <form method="POST">
   <input type="hidden" name="type" value="full">
   <button class="btn btn-primary">Yes, stop job</button>
-  <a href="{{ url_for('list_active_jobs') }}" class="btn btn-secondary">Cancel and return to job list</a>
+  <a href="{{ url_for('.list_active_jobs') }}" class="btn btn-secondary">Cancel and return to job list</a>
   </form>
 
 
