--- a/matcher/templates/admin/active_jobs.html
+++ b/matcher/templates/admin/active_jobs.html
@@ -34,7 +34,7 @@
         {% if i.stopping %}
           job is stopping
         {% else %}
-          <a href="{{ url_for('stop_job', osm_type=i.osm_type, osm_id=i.osm_id) }}">stop job</a>
+          <a href="{{ url_for('.stop_job', osm_type=i.osm_type, osm_id=i.osm_id) }}">stop job</a>
         {% endif %}
       </td>
       <td>{{ place.display_area }}</td>
