Click a card to show on map

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -12,9 +12,8 @@
 {% set qid = item.qid %}
 
 <div id="{{ qid }}"
-     class="card my-2
+     class="card my-2 candidate-item
      {% if upload_okay and picked %}
-        candidate-item
         {% if checked %}
           border-success
         {% else %}
