--- a/matcher/templates/no_match.html
+++ b/matcher/templates/no_match.html
@@ -34,10 +34,18 @@
   <p>{{ '{:,d}'.format(items_without_matches.count()) }} items</p>
 
   {% for item in items_without_matches %}
+    {% set fp = item.first_paragraph(languages) %}
     <div class="card my-2">
       <div class="card-body">
         <h5 class="card-title"><a href="{{ url_for('item_page', wikidata_id=item.item_id) }}">{{ item.label() }} ({{ item.qid }})</a></h5>
-    {{ (item.first_paragraph() or '') | safe }}
+        {% if fp %}
+          <div class="summary mt-0">
+            <div><em>Summary from {{ fp.lang.label(with_code=False) }}
+              Wikipedia ({{fp.lang.site_name}})</em></div>
+            {{ fp.extract | safe }}
+          </div>
+        {% endif %}
+
       {#
       <ul>
         {% if item.categories %}
