--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -455,8 +455,11 @@ Change comment: "<em>{{ obj.comment }}</em>"
         <input type="hidden" name="isa" value="{{ isa }}"/>
       {% endfor %}
 
-    <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
-    (Don't worry, there's a confirmation page)
+      {% if config.SHOW_TOP_SAVE_CANDIDATES %}
+        <button class="btn btn-primary">add wikidata tags to OpenStreetMap</button>
+        (Don't worry, there's a confirmation page)
+      {% endif %}
+
     <p class="mt-3">By default all likely matches are checked.
 	   If you prefer you can <a href="#" id="uncheck-all">uncheck all</a> and tick items as you check them.
      <a href="#" id="show-all-tags">Show all tags</a> to see more detail for candidate matches.</p>
