Add link to view no match item location on OSM

--- a/matcher/templates/no_match.html
+++ b/matcher/templates/no_match.html
@@ -209,6 +209,7 @@ function zoom_to_qid(qid) {
           </div>
         {% endif %}
 
+        <div><a href="{{ item.get_osm_url(show_marker=True) }}" target="osm">View location in OpenStreetMap <i class="fa fa-external-link" aria-hidden="true"></i></a></div>
 
       {#
       <ul>
