--- a/matcher/templates/base.html
+++ b/matcher/templates/base.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
   <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap4/css/bootstrap.css')}}">
 
+  <link rel="stylesheet" href="{{ url_for('static', filename='fork-awesome/css/fork-awesome.css')}}">
+
   {% block style %}
   {% endblock %}
 </head>
