Show street address from wikidata on candidates page

--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -73,6 +73,12 @@
     </div>
   {% endif %}
 
+  {% set addresses = item.get_street_addresses() %}
+
+  {% if addresses %}
+    <p>Street address: <strong>{{ '; '.join(addresses) }}</strong> (from Wikidata)<p>
+  {% endif %}
+
   {% set identifiers = item.identifier_values() %}
   {% if identifiers %}
     <p>
