item page wikidata links open in new tab

--- a/matcher/templates/item_page.html
+++ b/matcher/templates/item_page.html
@@ -79,7 +79,7 @@
         {% endfor %}
       </li>
       {% endif %}
-      <li><a href="http://wikidata.org/wiki/{{ qid }}" target="wikidata">view on Wikidata <i class="fa fa-wikidata" aria-hidden="true"></i> <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
+      <li><a href="http://wikidata.org/wiki/{{ qid }}" target="_blank">view on Wikidata <i class="fa fa-wikidata" aria-hidden="true"></i> <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
       {% if not (lat and lon) %}
       <li>no coordinates for item</li>
       {% endif %}
