Add admin log viewer

--- a/matcher/templates/admin/jobs_list.html
+++ b/matcher/templates/admin/jobs_list.html
@@ -31,6 +31,8 @@
         <a href="{{ place.matcher_progress_url() }}">{{ name }}</a>
         |
         <a href="{{ url }}">view on OSM</a>
+        |
+        <a href="{{ i.log_url() }}">view log</a>
       </td>
       <td class="text-nowrap text-right">{{ place.display_area }}</td>
       <td class="text-nowrap text-right">
