--- a/matcher/templates/macro.html
+++ b/matcher/templates/macro.html
@@ -84,7 +84,7 @@
          <textarea class="form-control" id="comment-{{ c.key }}" rows="3"></textarea>
        </div>
 
-       <button class="btn btn-danger btn-sm bad-match-save" data-item="{{ c.item_id }}" data-osm-type="{{ c.osm_type }}", data-osm-id="{{ c.osm_id }}" data-key="{{ c.key }}">report as bad match</button>
+       <button class="btn btn-danger btn-sm bad-match-save" data-item="{{ c.item_id }}" data-osm-type="{{ c.osm_type }}" data-osm-id="{{ c.osm_id }}" data-key="{{ c.key }}">report as bad match</button>
      </div>
      {% endif %}
 
