--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -142,7 +142,7 @@ Change comment: "<em>{{ obj.comment }}</em>"
   <p v-if="!matches_loaded">
     Loading &mldr;
   </p>
-  <templete v-else>
+  <template v-else>
 
   <p>{{ items.length }} candidates found</p>
 
@@ -200,7 +200,7 @@ Change comment: "<em>{{ obj.comment }}</em>"
     </ul>
   </div>
 
-  <p v-if="authenticated" class="mt-3">By default all likely matches are checked.
+  <p v-if="authenticated && items.length > 1" class="mt-3">By default all likely matches are checked.
    If you prefer you can <a href="#" @click.prevent="untick_all">uncheck all</a> and tick items as you check them.
    <a href="#" @click.prevent="show_all_tags">Show all tags</a> to see more detail for candidate matches.
   </p>
@@ -219,6 +219,8 @@ Change comment: "<em>{{ obj.comment }}</em>"
          v-if="filter_matches_item(item)"
          v-bind:class="{ highlight: item.qid == current_highlight }"
          @click="show_on_map(item)">
+        <div class="row no-gutters">
+          <div :class="item.image ? 'col-md-8' : 'col'">
         <div class="card-body">
           <div :id="`label-${item.qid}`"
                v-bind:class="{
@@ -313,6 +315,11 @@ Change comment: "<em>{{ obj.comment }}</em>"
           </ul>
         </div>
       </div>
+          <div v-if="item.image" class="col-md-4">
+            <img :src="item.image" class="card-img-top">
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div v-if="authenticated && items.length > 0">
@@ -324,7 +331,7 @@ Change comment: "<em>{{ obj.comment }}</em>"
     <a class="btn btn-primary" :href="login_url">login to upload wikidata tags</a>
   </p>
 
-  </templete>
+  </template>
 </div>
 {% endraw %}
 </form>
