--- a/matcher/templates/old_candidates.html
+++ b/matcher/templates/old_candidates.html
@@ -175,7 +175,10 @@ var bounds = [[{{ place.north }}, {{place.west }}],
               [{{ place.south}}, {{ place.east}}]];
 map.fitBounds(bounds);
 {% endif %}
-var tiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+var tiles = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  maxNativeZoom: 19,
+  maxZoom: 21
+});
 tiles.addTo(map);
 var group = L.featureGroup();
 
