--- a/matcher/templates/candidates.html
+++ b/matcher/templates/candidates.html
@@ -53,9 +53,9 @@ const user_is_authenticated = {{ g.user.is_authenticated | tojson }};
 </script>
 
 <script src="https://unpkg.com/axios@latest"></script>
-<script src="https://unpkg.com/vue@latest"></script>
+<script src="https://unpkg.com/vue@2.6.14"></script>
 <script src="https://unpkg.com/sortablejs@latest"></script>
-<script src="https://unpkg.com/vuedraggable@latest"></script>
+<script src="https://unpkg.com/vuedraggable@2.24.3"></script>
 <script src="{{ url_for('static', filename='leaflet/leaflet.js') }}"></script>
 <script src="{{ url_for('static', filename='js/candidates.js') }}"></script>
 <script>
