Rewrite browse detail code as class
Split up a big function into smaller more understandable chunks.

--- a/matcher/templates/browse.html
+++ b/matcher/templates/browse.html
@@ -116,9 +116,9 @@
   <p>No subregions were found.</p>
 {% endif %}
 
-{% if extra_type_places %}
+{% if extra_rows %}
   <h3>{{ extra_type_label }}</h3>
-{{ place_table(extra_type_places) }}
+{{ place_table(extra_rows) }}
 {% endif %}
 
 {% if former_places %}
